--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.0.2'
     compile 'com.android.support:recyclerview-v7:26.0.2'
+
+    // TODO (3) Add play-services-places and play-services-location dependencies
     compile 'com.google.android.gms:play-services-places:9.8.0'
     compile 'com.google.android.gms:play-services-location:9.8.0'
     testCompile 'junit:junit:4.12'
